Changed web2py's response delimiter. Fixed login layout.

--- a/views/base/content.html
+++ b/views/base/content.html
@@ -3,11 +3,12 @@
         <div class="pageheader notab">
             <h1 class="pagetitle">Invoice (Client View)</h1>
             <span class="pagedesc">This is a sample description of a page</span>
-            {{block content-tabs}}
-            {{end}}
+            <? block content-tabs ?>
+            <? end ?>
         </div><!--pageheader-->
 
-        {{include}}
+        <? block content ?>
+        <? end ?>
 
     </div><!-- centercontent -->
     
