--- a/views/base/topheader.html
+++ b/views/base/topheader.html
@@ -27,13 +27,13 @@
             </div>
             -->
             <div class="userinfo">
-                <img src="{{=URL('static', 'images/thumbs/avatar.png')}}" alt="" />
+                <img src="<? =URL('static', 'images/thumbs/avatar.png') ?>" alt="" />
                 <span>Juan Dela Cruz</span>
             </div><!--userinfo-->
             
             <div class="userinfodrop">              
                 <div class="avatar">
-                    <a href=""><img src="{{=URL('static', 'images/thumbs/avatarbig.png')}}" alt="" /></a>
+                    <a href=""><img src="<? =URL('static', 'images/thumbs/avatarbig.png') ?>" alt="" /></a>
                     <div class="changetheme">
                         Change theme: <br />
                         <a class="default"></a>
