--- a/views/base/header.html
+++ b/views/base/header.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="<? =URL('static', 'js/plugins/jquery.cookie.js') ?>"></script>
 <script type="text/javascript" src="<? =URL('static', 'js/plugins/angular.min.js') ?>"></script>
 <script type="text/javascript" src="<? =URL('static', 'js/custom/general.js') ?>"></script>
+<? include 'base/change-theme.html' ?>
 <? block scripts ?>
 <? end ?>
 <!--[if IE 9]>
