--- a/views/base/layout.html
+++ b/views/base/layout.html
@@ -1,6 +1,7 @@
 <? include 'base/header.html' ?>
-<? include 'base/topheader.html' ?>
-<? include 'base/head.html' ?>
+<? include 'base/title-bar.html' ?>
+<? include 'base/user.html' ?>
+<? include 'base/menu.html' ?>
 <? include 'base/sidebar.html' ?>
 <? include 'base/content.html' ?>
 <? include 'base/footer.html' ?>
