--- a/views/login/ajax.html
+++ b/views/login/ajax.html
@@ -7,21 +7,32 @@
 
         $scope.processForm = function() {
 
-            $http({
-                method: 'POST',
-                url: '<? =URL("init", "users", "api/json/login")  ?>',
-                data: jQuery.param($scope.formData),
-                headers : { 'Content-Type': 'application/x-www-form-urlencoded' }
-            })
+            if ($scope.formData.username || $scope.formData.password) {
 
-            .success(function(data) {
-                if (data.data) {
-                    window.location.replace('<? =URL("init", "default", "index") ?>');
-                }
-                else {
-                    console.log(data.error.message);
-                }
-            });
+                $http({
+                    method: 'POST',
+                    url: '<? =URL("init", "users", "api/json/login")  ?>',
+                    data: jQuery.param($scope.formData),
+                    headers : { 'Content-Type': 'application/x-www-form-urlencoded' }
+                })
+
+                .success(function(data) {
+                    if (data.data) {
+                        window.location.replace('<? =URL("init", "default", "index") ?>');
+                    }
+                    else {
+                        jQuery('.nousername').fadeOut();
+                        jQuery('.nousername').fadeIn();
+                        $scope.error = data.error.message;
+                    }
+                });
+
+            }
+            else {
+                jQuery('.nousername').fadeOut();
+                jQuery('.nousername').fadeIn();
+                $scope.error = 'Debe llenar todos los campos';
+            }
 
         };
 
