--- a/views/base/layout.html
+++ b/views/base/layout.html
@@ -2,6 +2,6 @@
 <? include 'base/title-bar.html' ?>
 <? include 'base/user.html' ?>
 <? include 'base/menu.html' ?>
-<? include 'base/sidebar.html' ?>
-<? include 'base/content.html' ?>
+<? block sidebar ?><? end ?>
+<? block content ?><? end ?>
 <? include 'base/footer.html' ?>
