--- a/views/login/index.html
+++ b/views/login/index.html
@@ -4,7 +4,7 @@
 <? end ?>
 
 <? block content ?>
-<body class="loginpage" ng-app="loginApp" ng-controller="loginController">
+<body class="loginpage" ng-app ng-controller="loginController">
 	<div class="loginbox">
     	<div class="loginboxinner">
         	
