--- a/views/posts/index.html
+++ b/views/posts/index.html
@@ -2,8 +2,8 @@
 <? block content ?>
 
 <div class="pageheader notab">
-    <h1 class="pagetitle">Dashboard</h1>
-    <span class="pagedesc">Estad&iacute;sticas principales</span> 
+    <h1 class="pagetitle">Publicaciones</h1>
+    <span class="pagedesc">Edici&oacute;n, calendarizaci&oacute;n y env&iacute;o de publicaciones</span> 
 </div><!--pageheader-->
 
 <div id="contentwrapper" class="contentwrapper lineheight21">
