--- a/views/reports/index.html
+++ b/views/reports/index.html
@@ -2,8 +2,8 @@
 <? block content ?>
 
 <div class="pageheader notab">
-    <h1 class="pagetitle">Dashboard</h1>
-    <span class="pagedesc">Estad&iacute;sticas principales</span> 
+    <h1 class="pagetitle">Reportes</h1>
+    <span class="pagedesc">Toda clase de reportes</span> 
 </div><!--pageheader-->
 
 <div id="contentwrapper" class="contentwrapper lineheight21">
