--- a/static/css/style.default.css
+++ b/static/css/style.default.css
@@ -320,6 +320,8 @@ body { background: #eee !important; }
 .headermenu li a span.icon-speech { background: url(../images/icons/speech.white.png) no-repeat center center; }
 .headermenu li a span.icon-message { background: url(../images/icons/message.white.png) no-repeat center center; }
 .headermenu li a span.icon-chart { background: url(../images/icons/chart.white.png) no-repeat center center; }
+.headermenu li a span.icon-user { background: url(../images/icons/user.white.png) no-repeat center center; }
+
 .headermenu li a:hover { 
 	background: url(../images/default/bghover.png) no-repeat center bottom; -moz-box-shadow: inset 0 1px 0 #4f627e; 
 	-webkit-box-shadow: inset 0 1px 0 #4f627e; box-shadow: inset 0 1px 0 #4f627e;
