--- a/views/base/menu.html
+++ b/views/base/menu.html
@@ -1,22 +1,24 @@
 <div class="header">
-        <ul class="headermenu">
-            <li><a href="dashboard.html"><span class="icon icon-flatscreen"></span>Dashboard</a></li>
-            <li><a href="manageblog.html"><span class="icon icon-pencil"></span>Manage Blog</a></li>
-            <li><a href="messages.html"><span class="icon icon-message"></span>Messages</a></li>
-            <li><a href="reports.html"><span class="icon icon-chart"></span>Reports</a></li>
-        </ul>
-        
-        <div class="headerwidget">
-            <div class="earnings">
-                <div class="one_half">
-                    <h4>Today's Earnings</h4>
-                    <h2>$640.01</h2>
-                </div><!--one_half-->
-                <div class="one_half last alignright">
-                    <h4>Current Rate</h4>
-                    <h2>53%</h2>
-                </div><!--one_half last-->
-            </div><!--earnings-->
-        </div><!--headerwidget-->
-        
-    </div><!--header-->
+
+    <ul class="headermenu">
+        <li class="<? =MENU['dashboard'] ?>"><a href="<? =URL('init', 'default', 'index') ?>"><span class="icon icon-flatscreen"></span>Dashboard</a></li>
+        <li class="<? =MENU['posts'] ?>"><a href="<? =URL('init', 'posts', 'index') ?>"><span class="icon icon-message"></span>Publicaciones</a></li>
+        <li class="<? =MENU['customers'] ?>"><a href="<? =URL('init', 'customers', 'index') ?>"><span class="icon icon-pencil"></span>Clientes</a></li>
+        <li class="<? =MENU['reports'] ?>"><a href="<? =URL('init', 'reports', 'index') ?>"><span class="icon icon-chart"></span>Reportes</a></li>
+        <li class="<? =MENU['users'] ?>"><a href="<? =URL('init', 'users', 'index') ?>"><span class="icon icon-user"></span>Usuarios</a></li>
+    </ul>
+    
+    <div class="headerwidget">
+        <div class="earnings">
+            <div class="one_half">
+                <h4>Today's Earnings</h4>
+                <h2>$640.01</h2>
+            </div><!--one_half-->
+            <div class="one_half last alignright">
+                <h4>Current Rate</h4>
+                <h2>53%</h2>
+            </div><!--one_half last-->
+        </div><!--earnings-->
+    </div><!--headerwidget-->
+    
+</div><!--header-->
