--- a/views/base/user.html
+++ b/views/base/user.html
@@ -19,9 +19,10 @@
         <h4><? =auth.user.first_name + ' ' + auth.user.last_name ?></h4>
         <span class="email"><? =auth.user.email ?></span>
         <ul>
-            <li><a href="editprofile.html">Editar perfil</a></li>
-            <li><a href="help.html">Ayuda</a></li>
+            <li><a href="<? =URL('init', 'users', 'index') ?>">Cambiar contraseña</a></li>
+            <li><a href="mailto:jd@beardcode.mx">Ayuda</a></li>
             <li><a href="<? =URL('init', 'users', 'logout') ?>">Cerrar Sesión</a></li>
+            <br />
         </ul>
     </div><!--userdata-->
 </div><!--userinfodrop-->
