--- a/views/base/header.html
+++ b/views/base/header.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="<? =URL('static', 'js/plugins/jquery-1.7.min.js') ?>"></script>
 <script type="text/javascript" src="<? =URL('static', 'js/plugins/jquery-ui-1.8.16.custom.min.js') ?>"></script>
 <script type="text/javascript" src="<? =URL('static', 'js/plugins/jquery.cookie.js') ?>"></script>
+<script type="text/javascript" src="<? =URL('static', 'js/plugins/jquery.alerts.js') ?>"></script>
 <script type="text/javascript" src="<? =URL('static', 'js/plugins/angular.min.js') ?>"></script>
 <script type="text/javascript" src="<? =URL('static', 'js/custom/general.js') ?>"></script>
 <? include 'base/change-theme.html' ?>
