--- a/views/users/form.html
+++ b/views/users/form.html
@@ -1,14 +1,14 @@
-<form class="stdform stdform2" ng-controller="userController" ng-submit="processForm()">
+<div ng-model="message.type" class="notibar {{ message.type }}" id="notification">
+    <a class="close"></a>
+    <p ng-model="message.text">{{ message.text }}</p>
+</div><!-- notification msgsuccess -->
+<form class="stdform stdform2"  ng-submit="processForm()">
     <p>
         <label>Seleccione un usuario</label>
         <span class="field">
-            <select data-placeholder="Seleccione un usuario..." class="chzn-select" style="width:350px;"
-                ng-change="userSelect()" ng-model="formData.user">
-                <option value=""></option> 
-                <option value="">Nuevo usuario</option> 
-                <? for user in users: ?>
-                    <option value="<? =user.id ?>"><? =user.username ?></option> 
-                <? pass ?>
+            <select data-placeholder="Seleccione un usuario..." class="uniformselect"
+                ng-change="userSelect()" ng-model="formData.user"
+                ng-options="user.id as user.username for user in users">
             </select>
         </span>    
     </p>
@@ -46,5 +46,6 @@
     <p class="stdformbutton">
         <input type="hidden" ng-model="formData.id" tabindex="9" />
         <button class="submit radius2">Guardar</button>
+        <a class="btn btn_trash" ng-click="deleteUser()"><span>Borrar</span></a>
     </p>
 </form>
