Current user password change. WIP.

--- a/views/base/header.html
+++ b/views/base/header.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="<? =URL('static', 'js/plugins/angular.min.js') ?>"></script>
 <script type="text/javascript" src="<? =URL('static', 'js/custom/general.js') ?>"></script>
 <? include 'base/change-theme.html' ?>
+<? include 'base/change-password.html' ?>
 <? block scripts ?>
 <? end ?>
 <!--[if IE 9]>
