Completed user password change.

--- a/views/base/change-password.html
+++ b/views/base/change-password.html
@@ -1,18 +1,47 @@
 <script type="text/javascript">
 function passwordController($scope, $http, $compile) {
 
-    $scope.changePassword = function() {
-        var title = 'Cambiar contraseña'
-        jPass('Ingrese su contraseña actual', '', title, function(r1) {
-            if (r1) {
-                jPass('Ingrese la contraseña nueva', '', title, function(r2) {
-                    if(r2){
-                        jPass('Confirme la nueva contraseña', '', title, function(r3){
+    $scope.new_pass = '';
+    $scope.new_confirm = '';
 
-                        });
-                    }
-                });
+    $scope.changePassword = function() {
+        jPass('Ingrese su contraseña actual', '', 'Cambiar contraseña', function(r1) {
+            if (r1) {
+                $http.post('<? =URL("init", "users", "api/json/check_password") ?>', {'password': r1 })
+                    .success(function(data){
+                        console.log(data);
+                        if(data.data) {
+                            changePassword();
+                        }
+                        else{
+                            jAlert(data.error.message, 'Aviso');
+                        }
+                    });
             }
+        });
+    }
+
+    function changePassword() {
+        var title = 'Cambiar contraseña';
+        jPass('Ingrese la nueva contraseña', '', title, function(c1) {
+                if(c1) {
+                    jPass('Repita la contraseña', '', title, function(c2){
+                        if(c1 != c2) {
+                            jAlert('Las contraseñas no coinciden.', 'Aviso');
+                        }
+                        else{
+                            $http.post('<? =URL("init", "users", "api/json/change_password") ?>', {'password': c1 })
+                                .success(function(data) {
+                                    if(data.data) {
+                                        jAlert('Se cambio la contraseña exitosamente.', 'Aviso');
+                                    }
+                                    else {
+                                        jAlert(data.error.message, 'Aviso');
+                                    }
+                                });
+                        }
+                    });
+                }
         });
     }
 
