Addition of views for customers.

--- a/views/customers/unsubscribe.html
+++ b/views/customers/unsubscribe.html
@@ -15,13 +15,11 @@
 
     <div class="vernav">
         <ul>
-            <li class="current"><a href="<? =URL('init', 'customers', 'index') ?>" class="inbox">Alta a clientes</a></li>
-            <li ><a href="<? =URL('init', 'customers', 'unsubscribe') ?>" >Baja a clientes</a></li>
+            <li><a href="<? =URL('init', 'customers', 'index') ?>" class="inbox">Alta a clientes</a></li>
+            <li class="current"><a href="<? =URL('init', 'customers', 'unsubscribe') ?>" >Baja a clientes</a></li>
         </ul>
         <a class="togglemenu"></a>
         <br /><br />
     </div><!--leftmenu-->
-
-<? include 'customers/subscribeContent.html' ?>
 
 <? end ?>
